1999-02-07  Jim Meyering  <meyering@ascend.com>

	1999-02-05  Eli Zaretskii  <eliz@is.elta.co.il>
	* m4/gettext.m4: Support DOS-style d:/foo/bar absolute file names.

1999-02-06  Jim Meyering  <meyering@ascend.com>

	* chown.m4: Use `AC_SUBST(LIBOBJS)' since we set LIBOBJS.
	* fnmatch.m4: Likewise.
	* getgroups.m4: Likewise.
	* lstat.m4: Likewise.
	* malloc.m4: Likewise.
	* putenv.m4: Likewise.
	* realloc.m4: Likewise.
	* regex.m4: Likewise.
	* stat.m4: Likewise.
	* strftime.m4: Likewise.
	Suggestion from Alain Magloire.

	* chown.m4: Use `.$ac_objext', not `.o'.
	* fnmatch.m4: Likewise.
	* getgroups.m4: Likewise.
	* getline.m4: Likewise.
	* lstat.m4: Likewise.
	* malloc.m4: Likewise.
	* memcmp.m4: Likewise.
	* putenv.m4: Likewise.
	* realloc.m4: Likewise.
	* regex.m4: Likewise.
	* stat.m4: Likewise.
	* strftime.m4: Likewise.
	Suggestion from Alain Magloire.

	* jm-macros.m4: Actually invoke jm_WITH_REGEX now that it requires
	an argument.

	* regex.m4: Add a run-time Test for proper operation of
	re_compile_pattern.

1999-01-31  Jim Meyering  <meyering@ascend.com>

	* getloadavg.m4: Check for locale.h and the function, setlocale.

1999-01-30  Jim Meyering  <meyering@ascend.com>

	* check-type.m4: Use 3-arg form of AC_DEFINE.

	* jm-mktime.m4: Make this a wrapper around the official AM_FUNC_MKTIME
	rather than my private copy, now that the official one is up to date.
	* mktime.m4: Remove file.

	* getloadavg.m4: Use 3-arg form of AC_DEFINE.
	* uptime.m4: Likewise.
	* uintmax_t.m4: Likewise.

1999-01-28  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Use jm_AFS.
	* afs.m4: New file (from fileutils' configure.in).

	* assert.m4: Use the 3-argument forms of AC_DEFINE* macros.
	* chown.m4: Likewise.
	* d-ino.m4: Likewise.
	* d-type.m4: Likewise.
	* fnmatch.m4: Likewise.
	* getgroups.m4: Likewise.
	* gettext.m4: Likewise.
	* jm-mktime.m4: Likewise.
	* jm-winsz2.m4: Likewise.
	* lcmessage.m4: Likewise.
	* ls-mntd-fs.m4: Likewise.
	* malloc.m4: Likewise.